--- a/entry-end.html
+++ b/entry-end.html
@@ -256,140 +256,10 @@
 
                 <!-- 問い合わせフォーム -->
                 <div class="form-wrapper">
-                    <p class="entry-line1 fpc24sp16">ENTRY FORM</p>
-                    <p class="entry-line2 fpc32sp18"><span class="font-gold">新卒・中途採用</span><span>エントリーフォーム</span></p>
-                    <p class="entry-line3 fpc16sp14">当社へ入社ご希望の方は、下記の送信フォームより送信して下さい。<br>
-                        <span class="font-gold">※</span>は必須項目になります。</p>
-                    <form
-                        action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScJucxP_DS7_2HVpQszU4l_fJIYgBRjCXcEjJZDbFCiK7lfUg/formResponse"
-                        method="POST" id="form2" class="fpc16sp14">
+                    <p class="end-message fpc32sp18">送信ありがとうございました。</p>
+                    <p class="end-message fpc16sp14"><span>3営業日以内に人事担当者より</span><span>連絡させていただきます。</span></p>
 
-
-                        <div class="form_box">
-                            <label for="name">お名前<span class="font-gold">※</span></label>
-                            <input type="text" name="entry.1659284908" id="name" placeholder="例：山田太郎" required>
-                        </div>
-                        <div class="form_box">
-                            <label for="name">お名前カナ<span class="font-gold">※</span></label>
-                            <input type="text" name="entry.1659284908" id="name" placeholder="例：ヤマダタロウ" required>
-                        </div>
-
-
-
-                        <div class="form_box">
-                            <label for="mail">メールアドレス<span class="font-gold">※</span></label>
-                            <input type="mail" name="entry.184998275" id="mail" placeholder="例：tetote@gmail.com"
-                                required>
-                        </div>
-                        <div class="form_box">
-                            <label for="phonenumber">電話番号<span class="font-gold">※</span></label>
-                            <input type="phonenumber" name="entry.184998275" id="phonenumber"
-                                placeholder="例：00-0000-0000" required>
-                        </div>
-                        <div class="form_box">
-                            <label for="phonenumber">生年月日<span class="font-gold">※</span></label>
-
-
-                            <div class="form-box">
-                                <div class="birth-box">
-
-                                    <input type="text" class="birth" name="entry.1270178505" id="" placeholder="例：2000"
-                                        autocomplete="birth-year" required>
-                                    <span>年</span>
-                                </div>
-                                <div class="birth-monthdate">
-                                    <div class="birth-box">
-                                        <input type="text" class="birth" name="entry.1270178505" id=" placeholder=" 介護"
-                                            autocomplete="birth-month" required>
-                                        <span>月</span>
-                                    </div>
-                                    <div class="birth-box">
-                                        <input type="text" class="birth" name="entry.1270178505" id=" placeholder=" 介護"
-                                            autocomplete="birth-date" required>
-                                        <span>日</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form_box">
-                            <label for="job_objective">希望職種<span class="font-gold">※</span></label>
-                            <div class="radio_box">
-                                <div class="radio_smallbox">
-                                    <input type="radio" name="entry.1370082908" value="コンサルタント" id="consulting"
-                                        required>
-                                    <label for="radio" class="sample_label">コンサルタント</label>
-                                </div>
-                                <div class="radio_smallbox">
-                                    <input type="radio" name="entry.1370082908" value="ソリューション営業" id="solution-sales"
-                                        required>
-                                    <label for="radio" class="sample_label">ソリューション営業</label>
-                                </div>
-
-                                <div class="radio_smallbox">
-                                    <input type="radio" name="entry.1370082908" value="システムエンジニア" id="system-engineer"
-                                        required>
-                                    <label for="radio" class="sample_label">システムエンジニア</label>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form_box">
-                            <label for="pr">自己PR<span class="font-gold">※</span></label>
-
-                            <textarea name="entry.1313599907" id="pr" required placeholder="例：志望動機、自己PR"></textarea>
-
-                        </div>
-
-                        <div class="form_box">
-                            <label for="advertisement">当社を知ったきっかけを教えて下さい。</label>
-                            <div class="radio_box">
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="X(旧Twitter)"
-                                        id="Twitter" required>
-                                    <label for="radio" class="sample_label">X(旧Twitter)</label>
-                                </div>
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="Facebook"
-                                        id="Facebook" required>
-                                    <label for="radio" class="sample_label">Facebook</label>
-                                </div>
-
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="Instagram"
-                                        id="Instagram" required>
-                                    <label for="radio" class="sample_label">Instagram</label>
-                                </div>
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="検索広告" id=""
-                                        required>
-                                    <label for="radio" class="sample_label">検索広告</label>
-                                </div>
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="知人友人・親戚" id=""
-                                        required>
-                                    <label for="radio" class="sample_label">知人友人・親戚</label>
-                                </div>
-                                <div class="radio_smallbox">
-                                    <input type="radio" class="radio2" name="entry.1370082908" value="その他" id=""
-                                        required>
-                                    <label for="radio" class="sample_label">その他</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form_checkbox fpc14sp12">
-                            <input id="checkbox" class="checkbox" type="checkbox" name="entry.1590228198" value="送信内容"
-                                required>
-                            <label for="checkbox">個人情報保護方針に同意する</label>
-                        </div>
-
-                        <button type="submit2" class="submit-btn" id="button2" disabled>
-                            <p>送信する</p>
-                        </button>
-
-                    </form>
-
-                    
+                    <p class="false-message">送信失敗です</p>
                 </div>
 
 
