--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                                 社内研修
                             </div>
                             <div class="blog-title fpc18sp14">
-                                <a href="blog-detail.html">新入社員向けに、入社前研修を行いました。</a>
+                                <a href="blog-single.html">新入社員向けに、入社前研修を行いました。</a>
                             </div>
                             <div class="blog-date f12">
                                 2025.03.25
@@ -556,6 +556,7 @@
                     <div class="blog-contents-box">
 
                     </div>
+                    
                 </div>
 
             </div>
