--- a/staff-single.html
+++ b/staff-single.html
@@ -226,17 +226,37 @@
             </div>
     </header>
     <main>
-        <!--------- 個別ページファーストビュー --------->
-        <div class="page-fv-wrapper" id="about-us">
-            <div class="page-fv-img">
-                <img src="images/about-fv 1.jpg">
-            </div>
-            <div class="page-fv-textbox">
-                <h1 class="page-title fpc64sp45 back-white f-viga">ABOUT US</h1>
-                <p class="page-subtitle fpc24sp12 back-white">TETOTEについて</p>
-                <p class="page-description fpc16sp14 back-white">私たちの理念を紹介をします。</p>
-            </div>
+        <!--------- 社員紹介シングルページファーストビュー --------->
+        <div class="staff-single-fv-wrapper">
+            <div class="page-section-wrapper staff-profile-box">
+                <div class="staff-single-eyecatch">
+                    <img src="images/syain1.jpeg" alt="スタッフ写真">
+                </div>
+                <div class="staff-profile-text">
+                    <div class="staff-single-message1">
 
+                        <span class="back-white fpc36sp18">「あなたが担当で良かった」</span><br>
+                        <span class="back-white fpc24sp20">この一言が、最高のやりがい</span>
+
+                    </div>
+                    <div class="staff-single-message2">
+                        <p class="member-division fpc14sp12">コンサルタント</p>
+                        <span class="member-name fpc24sp20">
+                            西村 優
+                        </span>
+                        <span class="member-year fpc16sp12 ">2011年入社</span>
+
+
+                    </div>
+                    <div class="staff-single-message3">
+                        <p class="fpc16sp12">
+                            東京大学工学部を卒業後、大手IT企業でシステムエンジニアとして5年間、システム開発に携わった。その後、TETOTEに転職し、IT戦略策定やシステム導入プロジェクトの支援に従事。豊富な経験と知識を活かし、クライアントの課題解決に貢献している。
+                        </p>
+                    </div>
+                </div>
+                
+
+            </div>
         </div>
         <!-- パンくずリスト -->
         <div class="breadcrumb-wrapper">
@@ -416,14 +436,14 @@
                 <nav class="footer-navigation">
                     <ul class="footer-nav-list fpc16sp14">
                         <li><a href="index.html">ホーム</a></li>
-                        <li><a href="about-us.html">TETOTEについて</a></li>
+                        <li><a href="about.html">TETOTEについて</a></li>
                         <li><a href="staff.html">人を知る</a></li>
                         <li><a href="carrer.html">研修制度とキャリアパス</a></li>
                         <li><a href="benefits.html">福利厚生</a></li>
                         <li><a href="blog.html">採用ブログ</a></li>
                         <li><a href="detail.html">募集要項</a></li>
                         <li><a href="faq.html">よくある質問</a></li>
-                        <li><a href="about-us.html#company">会社概要</a></li>
+                        <li><a href="about.html#company">会社概要</a></li>
 
 
                     </ul>
