--- a/staff.html
+++ b/staff.html
@@ -227,14 +227,14 @@
     </header>
     <main>
         <!--------- 個別ページファーストビュー --------->
-        <div class="page-fv-wrapper" id="about-us">
+        <div class="page-fv-wrapper" id="staff">
             <div class="page-fv-img">
-                <img src="images/about-fv 1.jpg">
+                <img src="images/staff-fv.jpg">
             </div>
             <div class="page-fv-textbox">
-                <h1 class="page-title fpc64sp45 back-white f-viga">ABOUT US</h1>
-                <p class="page-subtitle fpc24sp12 back-white">TETOTEについて</p>
-                <p class="page-description fpc16sp14 back-white">私たちの理念を紹介をします。</p>
+                <h1 class="page-title fpc64sp45 back-white f-viga">STAFF</h1>
+                <p class="page-subtitle fpc24sp12 back-white">社員について</p>
+                <p class="page-description fpc16sp14 back-white">弊社社員のリアルな声を紹介しています。</p>
             </div>
 
         </div>
@@ -259,6 +259,7 @@
                 </ol>
             </div>
         </div>
+        <!-- 固定ページ内容  社員について-->
         <div class="staff-wrapper back-white">
 
             <div class="staff-item-container">
@@ -426,14 +427,14 @@
                 <nav class="footer-navigation">
                     <ul class="footer-nav-list fpc16sp14">
                         <li><a href="index.html">ホーム</a></li>
-                        <li><a href="about-us.html">TETOTEについて</a></li>
+                        <li><a href="about.html">TETOTEについて</a></li>
                         <li><a href="staff.html">人を知る</a></li>
                         <li><a href="carrer.html">研修制度とキャリアパス</a></li>
                         <li><a href="benefits.html">福利厚生</a></li>
                         <li><a href="blog.html">採用ブログ</a></li>
                         <li><a href="detail.html">募集要項</a></li>
                         <li><a href="faq.html">よくある質問</a></li>
-                        <li><a href="about-us.html#company">会社概要</a></li>
+                        <li><a href="about.html#company">会社概要</a></li>
 
 
                     </ul>
